--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <h1 id="whoami">Who Am I?</h1>
         <p class="intro">I'm currently a third year computer science student in the College of Engineering at Michigan State University. I'm always looking to learn new things in the world of computer science. At present I'm interested in computer graphics and how visuals are rendered on a screen. <br> 
         <br>
-        When I'm not busy doing homework for my classes, you can find me collaborating with my teammates on the MSU STARX team (link)...and when I'm not busy with STARX you can find me playing games on my PC. I have a blog (link) I update every now and then with my favorite games and my reviews of them. <br> 
+        When I'm not busy doing homework for my classes, you can find me collaborating with my teammates on the MSU STARX teamn... and when I'm not busy with STARX you can find me playing games on my PC. I have a blog I update every now and then with my favorite games and my reviews of them. <br> 
         <br>
-        This summer I'll be returning to Rocket Mortgage for my second term as a Software Engineer Intern (link).</p>
+        This summer I'll be returning to Rocket Mortgage for my second term as a Software Engineer Intern.</p>
 
         <img id="STARXlogo" src="imgs/STARX_Black_Transparent_Logo 1.png" alt="MSU STARX Logo">
         
