--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Benjamin Crimmins</title>
     <link rel="stylesheet" href="screen.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700" rel="stylesheet" />
+    <link rel="stylesheet" href="fonts.css">
   </head>
   <body>
     <ul id="navbar">
@@ -33,12 +33,12 @@
         <br>
         This summer I'll be returning to Rocket Mortgage for my second term as a Software Engineer Intern.</p>
 
-        <img id="STARXlogo" src="imgs/STARX_Black_Transparent_Logo 1.png" alt="MSU STARX Logo">
+        <img id="STARXlogo" src="imgs/STARX_Black_Transparent_Logo1.png" alt="MSU STARX Logo">
         
         <div id="STARXsection">
           <div class="STARXyear">
             <div id="STARXGroup" class="imagecap">
-              <img src="imgs/Group Photo.png" alt="MSU STARX Leadership lining up for one last team photo after competition">
+              <img src="imgs/GroupPhoto.png" alt="MSU STARX Leadership lining up for one last team photo after competition">
               <p class="caption">MSU STARX Leadership lining up for one last team photo after competition. Our suit malfunctioned the night before, so we weren't able to compete at full capacity. We still had a great time anyways! (2022)</p>
             </div>
 
@@ -55,14 +55,14 @@
             </div>
 
             <div id="STARXsuit" class="imagecap">
-              <img src="imgs/Suit1 1.png" alt="The suit propped on a table during competition">
+              <img src="imgs/Suit11.png" alt="The suit propped on a table during competition">
               <p class="caption">The suit propped on a table during competition. You can see that only two of the four actuators were actually used. The knee actuators were a level of complexity we weren't able to tackle in such a short amount of time (2023)</p>
             </div>
           </div>
 
           <div class="STARXyear">
             <div id="STARXObstacle" class="imagecap">
-              <img src="imgs/Obstacle 1.png" alt="A STARX member piloting the suit through the uneven tarrain obstacle">
+              <img src="imgs/Obstacle1.png" alt="A STARX member piloting the suit through the uneven tarrain obstacle">
               <p class="caption">A STARX member piloting the suit through the uneven terrain obstacle at the 2022 competition. This was the team's first year back after COVID and we were hosting for the first time. The obstacles and safety equipment were designed a constructed by the team.</p>
             </div>
 
@@ -75,9 +75,9 @@
 
         <h1 id="internships">Internships</h1>
         <div id="internshiptitle">
-          <img src="imgs/Rocket Logo.png" alt="Rocket Companies Logo">
+          <img src="imgs/RocketLogo.png" alt="Rocket Companies Logo">
           <h2 id="internshipname">Rocket Mortgage Software Engineer</h2>
-          <img src="imgs/Rocket Logo.png" alt="Rocket Companies Logo">
+          <img src="imgs/RocketLogo.png" alt="Rocket Companies Logo">
         </div>
         <p class="center" id="internshipspecs">May 2023 - August 2023 • Detroit, Michigan • Hybrid • 146 GitHub Contributions</p>
 
@@ -119,7 +119,7 @@
             <h2>Michigan State University</h2>
             <h3>Bachelor of Science, Computer Science 2025</h3>
           </div>
-          <img id="spartanlogo" src="imgs/Spartan Logo.png" alt="MSU Spartan Logo">
+          <img id="spartanlogo" src="imgs/SpartanLogo.png" alt="MSU Spartan Logo">
         </div>
         <p class="intro">I am proud to call Michigan State University my home. Ever since my first night in Wilson Hall, MSU has been the perfect place for me to learn and grow as a person. As any current or previous Spartan knows... once a Spartan, always a Spartan. GO GREEN!</p>
 
@@ -148,7 +148,7 @@
         <h1 id="whatnow">What Now?</h1>
         <div class="contact">
           <p class="center">Questions? Reach out!</p>
-          <a class="contactlink" href="mailto: bencrimmins8@gmail.com">bencrimmins8@gmail.com</a>
+          <a class="contactlink" href="mailto:bencrimmins8@gmail.com">bencrimmins8@gmail.com</a>
         </div>
         <div class="contact">
           <p class="center">Check out my GitHub!</p>
